--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css" />
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <div>
+      <a href="https://48f4c4af22224a399da01a5fe8f9a4f7.cc-propeller.cloud/#">
+        Download Excursion (coming soon)
+      </a>
+    </div>
+    <div>
+      <video autoplay="" muted="" loop="">
+        <source src="./resources/videos/excursion.mp4" type="video/mp4" />
+      </video>
+    </div>
+    <div>
+      <h2>Your personal travel guide</h2>
+      <p>
+        Excursion remembers places you like, and recommends new points of
+        interest around you.
+      </p>
+      <img src="./resources/images/camp.jpg" />
+      <img src="./resources/images/phone.png" />
+      <h2>Coming soon for iPhone and Android</h2>
+      <a href="https://48f4c4af22224a399da01a5fe8f9a4f7.cc-propeller.cloud/#">
+        Download Excursion (coming soon)
+      </a>
+    </div>
+    <div>© Excursion</div>
   </body>
 </html>
