created styles and added them to the page

--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <div>
+    <p>
       <a href="https://48f4c4af22224a399da01a5fe8f9a4f7.cc-propeller.cloud/#">
         Download Excursion (coming soon)
       </a>
-    </div>
-    <div>
-      <video autoplay="" muted="" loop="">
-        <source src="./resources/videos/excursion.mp4" type="video/mp4" />
-      </video>
-    </div>
-    <div>
-      <h2>Your personal travel guide</h2>
-      <p>
-        Excursion remembers places you like, and recommends new points of
-        interest around you.
-      </p>
+    </p>
+    <video autoplay="" muted="" loop="">
+      <source src="./resources/videos/excursion.mp4" type="video/mp4" />
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excursion remembers places you like, and recommends new points of interest
+      around you.
+    </p>
+    <p>
       <img src="./resources/images/camp.jpg" />
+    </p>
+    <p>
       <img src="./resources/images/phone.png" />
-      <h2>Coming soon for iPhone and Android</h2>
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
       <a href="https://48f4c4af22224a399da01a5fe8f9a4f7.cc-propeller.cloud/#">
-        Download Excursion (coming soon)
+        Download Excursion (Coming soon!)
       </a>
-    </div>
-    <div>© Excursion</div>
+    </p>
+    <p id="copyright">© Excursion</p>
   </body>
 </html>
